@@ -116,3 +116,6 @@ cdef void set_field_subtype(void *fielddefn, OGRFieldSubType subtype):
 
 cdef bint check_capability_create_layer(void *cogr_ds):
     return GDALDatasetTestCapability(cogr_ds, ODsCCreateLayer)
+
+cdef void *get_linear_geometry(void *geom):
+    return OGR_G_GetLinearGeometry(geom, 0.0, NULL)
